test/asm/negative/define_dec_uscore_only.asm
DEFINE dec.uscore_only _

A = dec.uscore_only
